gke/chatbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chatbot
  name: chatbot-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - nodePort: 32422
    port: 2053
    targetPort: 5000
    protocol: TCP
  selector:
    app: chatbot
  type: LoadBalancer
