gke/chatbot-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: chatbot-ingress
spec:
 backend:
   serviceName: chatbot-service
   servicePort: 2053
